added more information

--- a/a 0 - Git/a 0 - Git.vcxproj
+++ b/a 0 - Git/a 0 - Git.vcxproj
@@ -21,9 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{243b716a-cb06-4bab-94e5-6a480b0ac881}</ProjectGuid>
-    <RootNamespace>homework5</RootNamespace>
+    <ProjectGuid>{c3efd833-beea-4b61-8d67-12f4f368463f}</ProjectGuid>
+    <RootNamespace>git</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>a 0</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
