--- a/a 0 - Git/a 0 - Git.vcxproj
+++ b/a 0 - Git/a 0 - Git.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{c3efd833-beea-4b61-8d67-12f4f368463f}</ProjectGuid>
     <RootNamespace>git</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>a 0</ProjectName>
+    <ProjectName>a 0 - Git</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
