--- a/a 3 - Basics/a 3 - Basics.vcxproj
+++ b/a 3 - Basics/a 3 - Basics.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{9d801f27-e205-475f-bff1-e470d41a7c63}</ProjectGuid>
     <RootNamespace>homework3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>a 3</ProjectName>
+    <ProjectName>a 3 - Basics</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -105,6 +105,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
