--- a/a 5 - Functions2/a 5 - Functions2.vcxproj
+++ b/a 5 - Functions2/a 5 - Functions2.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{243b716a-cb06-4bab-94e5-6a480b0ac881}</ProjectGuid>
     <RootNamespace>homework5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>a 5</ProjectName>
+    <ProjectName>a 5 - Functions2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
