--- a/03 - Basics/03 - Basics.vcxproj
+++ b/03 - Basics/03 - Basics.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{9d801f27-e205-475f-bff1-e470d41a7c63}</ProjectGuid>
     <RootNamespace>homework3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>a 3 - Basics</ProjectName>
+    <ProjectName>03 - Basics</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
