--- a/04 - Functions/04 - Functions.vcxproj
+++ b/04 - Functions/04 - Functions.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{3d41fb21-0054-451c-a511-8109e86b055c}</ProjectGuid>
     <RootNamespace>homework4</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>a 4 - Functions</ProjectName>
+    <ProjectName>04 - Functions</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
