--- a/05 - Functions2/05 - Functions2.vcxproj
+++ b/05 - Functions2/05 - Functions2.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{4e9719dd-e052-46c1-81e2-5f6e38f77132}</ProjectGuid>
-    <RootNamespace>a9Structures2</RootNamespace>
+    <ProjectGuid>{243b716a-cb06-4bab-94e5-6a480b0ac881}</ProjectGuid>
+    <RootNamespace>homework5</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>b 10 - Structures2</ProjectName>
+    <ProjectName>05 - Functions2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -105,8 +105,6 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp17</LanguageStandard>
-      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
